Agregado de verificador de consistencias en PMC