@@ -1,5 +1,5 @@
 /**
- * 
+ *
  */
 package um.tesoreria.rest.service.view;
 
@@ -7,9 +7,9 @@ import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import um.tesoreria.rest.kotlin.model.ChequeraCuota;
 import um.tesoreria.rest.kotlin.model.view.ChequeraCuotaDeuda;
-import um.tesoreria.rest.service.ClaseChequeraService;
-import um.tesoreria.rest.service.TipoChequeraService;
+import um.tesoreria.rest.service.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatusCode;
@@ -28,23 +28,40 @@ import um.tesoreria.rest.service.TipoChequeraService;
 @Service
 public class ChequeraCuotaDeudaService {
 
-	@Autowired
-	private IChequeraCuotaDeudaRepository repository;
+    @Autowired
+    private IChequeraCuotaDeudaRepository repository;
 
-	@Autowired
-	private ClaseChequeraService claseChequeraService;
+    @Autowired
+    private ClaseChequeraService claseChequeraService;
 
-	@Autowired
-	private TipoChequeraService tipoChequeraService;
+    @Autowired
+    private TipoChequeraService tipoChequeraService;
 
-	public List<ChequeraCuotaDeuda> findAllByRango(OffsetDateTime desde, OffsetDateTime hasta, Pageable pageable) {
-		return repository.findAllByVencimiento1Between(Tool.firstTime(desde), Tool.lastTime(hasta), pageable);
-	}
+    @Autowired
+    private ChequeraCuotaService chequeraCuotaService;
+
+    public List<ChequeraCuotaDeuda> findAllByRango(OffsetDateTime desde, OffsetDateTime hasta, Pageable pageable) {
+        return repository.findAllByVencimiento1Between(Tool.firstTime(desde), Tool.lastTime(hasta), pageable).stream().map(cuotaDeuda -> {
+            if (cuotaDeuda.getChequeraId() == null) {
+                ChequeraCuota chequeraCuota = chequeraCuotaService.findByChequeraCuotaId(cuotaDeuda.getChequeraCuotaId());
+                cuotaDeuda.setChequeraId(chequeraCuota.getChequeraId());
+                cuotaDeuda.setChequeraSerie(chequeraCuota.getChequeraSerie());
+            }
+            return cuotaDeuda;
+        }).toList();
+    }
 
     public List<ChequeraCuotaDeuda> findAllPosgradoByRango(OffsetDateTime desde, OffsetDateTime hasta) {
-		List<Integer> claseChequeraIds = claseChequeraService.findAllByPosgrado().stream().map(claseChequera -> claseChequera.getClaseChequeraId()).collect(Collectors.toList());
-		List<Integer> tipoChequeraIds = tipoChequeraService.findAllByClaseChequeraIds(claseChequeraIds).stream().map(tipoChequera -> tipoChequera.getTipoChequeraId()).collect(Collectors.toList());
-		return repository.findAllByTipoChequeraIdInAndVencimiento1Between(tipoChequeraIds, Tool.firstTime(desde), Tool.lastTime(hasta));
+        List<Integer> claseChequeraIds = claseChequeraService.findAllByPosgrado().stream().map(claseChequera -> claseChequera.getClaseChequeraId()).collect(Collectors.toList());
+        List<Integer> tipoChequeraIds = tipoChequeraService.findAllByClaseChequeraIds(claseChequeraIds).stream().map(tipoChequera -> tipoChequera.getTipoChequeraId()).collect(Collectors.toList());
+        return repository.findAllByTipoChequeraIdInAndVencimiento1Between(tipoChequeraIds, Tool.firstTime(desde), Tool.lastTime(hasta)).stream().map(cuotaDeuda -> {
+            if (cuotaDeuda.getChequeraId() == null) {
+                ChequeraCuota chequeraCuota = chequeraCuotaService.findByChequeraCuotaId(cuotaDeuda.getChequeraCuotaId());
+                cuotaDeuda.setChequeraId(chequeraCuota.getChequeraId());
+                cuotaDeuda.setChequeraSerie(chequeraCuota.getChequeraSerie());
+            }
+            return cuotaDeuda;
+        }).toList();
     }
 
 }
